adding machine learning engineer
just wanted to see if i could add description in terminals (not through code editor)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <aside>
         <h2>About Me</h2>
     
-        <p>hope this will be usefull in the future -past adham, soon to be data scientist.</p>
+        <p>hope this will be usefull in the future -past adham, soon to be data scientist or machine learning engineer.</p>
     </aside>
     
     <footer>
