hai temen-temen closefirend adham. lagi pusing git revert nih

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </main>
     </div>
 
+
     <aside>
         <h2>About Me</h2>
     
-        <p>hope this will be usefull in the future -past adham, soon to be data scientist.</p>
-        <p>anjay adham jago github bosku</p>
+        <p>Pusing juga yak git revert.</p>
     </aside>
     
     <footer>
