change aside message
want to try git rebash

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <aside>
         <h2>About Me</h2>
     
-        <p>Pusing juga yak git revert.</p>
+        <p>udah bukan sidebar.</p>
     </aside>
     
     <footer>
